deploy/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: norn-shop
---
apiVersion: v1
kind: Namespace
metadata:
  name: norn-platform
